# smart_FAQ

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/api/: routes.py
app/db/: __init__.py  database.py  models.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  cache_service.py  llm_service.py  rag_service.py
app/utils/: __init__.py  logging.py  metrics.py
documents/: smarttask_api_guide.txt  smarttask_overview.txt  smarttask_security_privacy.txt  smarttask_user_manual.txt
scripts/: add_query_history_indexes.sql
static/: index.html
tests/: conftest.py  test_api.py  test_cache_service.py  test_integration.py  test_rag.py
