[project]
name = "smarttask-faq"
version = "1.0.0"
description = "Smart FAQ service for SmartTask with RAG"
requires-python = ">=3.11"

[tool.ruff]
# Target Python 3.11
target-version = "py311"

# Line length matching common standards
line-length = 100

# Exclude common directories
exclude = [
    ".git",
    ".github",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    ".ruff_cache",
    "*.egg-info",
    "build",
    "dist",
    "alembic/versions",
]

[tool.ruff.lint]
# Enable pyflakes (F), pycodestyle errors (E), warnings (W), isort (I), and more
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",    # Line too long (handled by formatter)
    "B008",    # Do not perform function calls in argument defaults (FastAPI uses this pattern)
    "B904",    # Within an except clause, raise exceptions with `raise ... from err`
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
    "ARG001",  # Unused function argument (common in FastAPI endpoints)
    "ARG002",  # Unused method argument
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values and assertions
"tests/**/*.py" = ["PLR2004", "S101", "ARG"]
# Init files can have unused imports for re-export
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Unix-style line endings
line-ending = "lf"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
